# srs-anything

./: .env.example  .envrc  .gitignore  README.md  devenv.nix
.docs/: TODO.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/config/: srs_schedule.yaml
backend/migrations/: 0001_init.sql
backend/src/: errors.rs  lib.rs  main.rs  models.rs  srs.rs  store.rs
backend/src/app/: bootstrap.rs  db.rs  mod.rs  routes.rs  state.rs
backend/src/controllers/: auth.rs  dashboard.rs  events.rs  integrations.rs  mod.rs  reviews.rs  settings.rs
backend/src/dto/: auth.rs  dashboard.rs  events.rs  integrations.rs  mod.rs  reviews.rs  settings.rs
backend/src/extractors/: api_key_user.rs  authenticated_user.rs  mod.rs
backend/src/ports/: mod.rs  notification_sender.rs  schedule_provider.rs
backend/src/repositories/: error.rs  in_memory.rs  mod.rs  postgres.rs  traits.rs
backend/src/services/: auth.rs  dashboard.rs  event.rs  integrations.rs  mod.rs  notification.rs  review.rs  settings.rs
backend/src/workers/: email_digest_worker.rs  mod.rs
backend/tests/: backend_e2e.rs  db_bootstrap.rs  repository_contracts.rs
backend/tests/support/: db.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  auth.ts  main.tsx  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShellLayout.test.tsx  AppShellLayout.tsx  ProtectedRoute.tsx
frontend/src/domain/: dashboard.test.ts  dashboard.ts  history.test.ts  history.ts  review.test.ts  review.ts
frontend/src/hooks/: useCurrentUser.ts
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  (+9 more)
tampermonkey/: leetcode-neetcode.user.js
(+4 files in other folders)
