[package]
name = "srs_anything_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sea-orm = { version = "1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "util", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
http-body-util = "0.1"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
